src/test/fail/wrong_arg_count_plain_call.ly
###
SyntaxError: Function f expects 0 args, but got 1.
Where: File "test/fail/wrong_arg_count_plain_call.ly" at line 8
###

function f() {}

f(1)
